src/objects/EngagementContactFieldSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Field_Type__c</fullName>
        <inlineHelpText>The datatype of the Contact field.  Only &quot;checkbox&quot; or &quot;text&quot; is supported.  &quot;text&quot; handles picklists, email, address, etc.</inlineHelpText>
        <label>Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>The value that the field must have in order to qualify for the level.  Enter an asterisk (*) to match any non-empty value. For checkboxes, leave this blank.</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldname__c</fullName>
        <inlineHelpText>The Contact field.  Only fields on the Contact object (not Account etc.) can be used here.</inlineHelpText>
        <label>Fieldname</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Value__c</fullName>
        <inlineHelpText>The Engagement Level earned by this contact if they have the field value specified.  For checkboxes, the level is earned if it&apos;s checked.</inlineHelpText>
        <label>Engagement Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Groundwire Engage Contact Field Settings</label>
</CustomObject>